fix(background-image): increase z-index bc it was causing a bug in .ios

--- a/src/app/components/background-image/background-image.component.scss
+++ b/src/app/components/background-image/background-image.component.scss
@@ -11,7 +11,7 @@ app-background-image {
   background-size: cover;
   background-repeat: no-repeat;
   transition: all ease-in-out .3s;
-  z-index: 0;
+  z-index: 2;
 
   .aux-img {
     display: none;
@@ -27,7 +27,7 @@ app-background-image {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: -1;
+    z-index: 0;
   }
 
   // By default, hide the spinner
